<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".RegisterYourself">

    <EditText
        android:id="@+id/edEnterYourName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edEmailAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/edEnterYourName1"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/edMobileNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/edEmailAddress1"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edDeliveryAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/edMobileNumber1"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:maxLines="3"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edDeliveryAddress1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edConfirmPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPassword1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />
    <Button
        android:id="@+id/btnRegister1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edConfirmPassword1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/dark_orange"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>
</RelativeLayout>