<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ForgetPassword">

    <ImageView
        android:id="@+id/imgAppLogo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/foodrunnerlogo" />

    <TextView
        android:id="@+id/txtDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/enter_your_resister_mobile_number_and_email_below"
        android:textColor="@color/white"
        android:textColorHighlight="@color/orange"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edMobileNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDetailsText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/edMobileNumber2"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmailAddress2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/dark_orange"
        android:padding="12dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>